动画实现改为velocity-react库

--- a/demo/redux-react-director3/package.json
+++ b/demo/redux-react-director3/package.json
@@ -40,7 +40,8 @@
     "redux": "^3.2.1",
     "redux-logger": "^2.4.0",
     "redux-thunk": "^1.0.3",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "velocity-react": "^1.1.5"
   },
   "devDependencies": {
     "babel-core": "^6.3.15",
