--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 demo/redux-react-director3/node_modules
+demo/redux-react-director3/dist/bundle.js
+
+2016/11/19/node_modules/.0.0.0@https-browserify/.npminstall.done
+2016/11/19/node_modules
